--- a/changes.css
+++ b/changes.css
@@ -3,16 +3,10 @@
 	background-color: black;
 }
 
-.main-navigation {
-	margin-left: auto;
-	margin-right: auto;
-}
-
 #site-navigation {
 	text-align: center;
 	background-color: gray;
 }
-
 
 .main-navigation li {
 	text-align: center; 
@@ -66,4 +60,8 @@
     border-top: 1px solid;
     text-align: center;
 	background-color: gray;
+}
+
+ul {
+	margin: auto auto;
 }
