--- a/style.css
+++ b/style.css
@@ -1053,4 +1053,44 @@ margin: auto auto;
 	margin: 0 auto;
 }
 
+#container-404 {
+	background-image: url("./assets/images/im404.png");
+	width: 100%;
+	height: 100vh;
+	position: absolute;
+	background-size: cover;
+	text-align: center;
+}
+
+.bubble {
+	margin-top: 100px;
+	padding-top: 100px;
+	padding-right: 40px;
+	background-image: url("./assets/images/speechbubble.png");
+	width: 600px;
+	height: 480px;
+	background-size: cover;
+	float: right;
+	bottom: 0;
+}
+
+.text404 {
+	float: left;
+	text-align: center;
+	margin-top: 200px;
+	margin-left: 50px;
+	width: 400px;
+}
+
+.h1404 {
+	font-size: 90px;
+	font-weight: 700;
+	margin: 0;
+}
+
+.p404 {
+	font-size: 34px;
+	font-weight: 500;
+	margin: 0;
+}
 
